# SustainableCompetition

./: .gitattributes  .gitignore  .gitmodules  README.md  configuration.html  dike.satcomp25micro.slurm.sh  dike.satcomp25micro2.slurm.sh  dike.slurm.sh  gbperf.csv  genindex.html  index.html  modules.html  nemesis.satcomp25micro.slurm.sh  nemesis.satcomp25micro2.slurm.sh  nemesis.slurm.sh  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.sh  sustainablecompetition.benchmarkadaptors.html  sustainablecompetition.data.db.html  sustainablecompetition.data.html  sustainablecompetition.dataadaptors.html  sustainablecompetition.html  sustainablecompetition.infrastructureadaptors.html  sustainablecompetition.performancemodels.html  sustainablecompetition.resultconsumers.html  sustainablecompetition.solveradaptors.html
.github/workflows/: linter.yml  tests.yml
_modules/: index.html
_modules/sustainablecompetition/: benchmarkatoms.html
_sources/: configuration.rst.txt  sustainablecompetition.benchmarkadaptors.rst.txt  sustainablecompetition.dataadaptors.rst.txt  sustainablecompetition.infrastructureadaptors.rst.txt  sustainablecompetition.performancemodels.rst.txt  sustainablecompetition.resultconsumers.rst.txt  sustainablecompetition.rst.txt  sustainablecompetition.solveradaptors.rst.txt
config/: satcomp25micro2.yml  satcomp25micro2methods.yml
data/: add_hash.py  csv_to_database.py  dump.sql
examples/: environments.csv  hashed_solvers.csv  instances.csv  kathleen_results.csv  performances.csv  plot_rank_diff_vs_cost.py  run_benchmarkers_on_competition.py  run_environment.csv  run_solver.py  run_solver.sh  save_environment.sh  solver_batch.sh  solvers.csv
instances/: .gitignore  main_2025.hashes
src/: BenchmarkAtoms.py  BenchmarkInterfaces.py  dike.py  nemesis.py  prototype.py
tests/: test_benchmarksAtoms.py  test_benchmarksatoms.py  test_controller.py
workdir/: kathleen_results.csv  run_environment.csv  run_solver.sh  runsolver  solver_batch.err  solver_batch.sh  wrapper.py
(+139 files in other folders)
