[project]
name = "sustainablecompetition"
version = "0.1.0"
description = "Sustainable Competition"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["polars>=1.8.0"]

[tool.ruff]
line-length = 160

[tool.pylint.format]
max-line-length = 160

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.12.11", "requests>=2.31.0"]

[tool.setuptools.packages.find]
where = ["src"] # This tells setuptools to look in src/
