[project]
name = "sustainablecompetition"
version = "0.1.0"
description = "Sustainable Competition"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=1.8.0",
    "py-cpuinfo>=9.0.0",
    "scikit-learn>=1.4.1.post1",
    "parsl>=2025.9.1",
    "gbd-tools>=4.9.11",
]

[tool.ruff]
line-length = 160

[tool.pylint.format]
max-line-length = 160
max-args = 7

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.12.11", "requests>=2.31.0"]

[tool.setuptools.packages.find]
where = ["src"] # This tells setuptools to look in src/

[tool.setuptools.package-data]
"sustainablecompetition" = ["data/*.db"]
